--- a/portfolio.css
+++ b/portfolio.css
@@ -130,94 +130,7 @@ footer {
 }
 
 
-
-.containerlvl {
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif, sans-serif;
-    font-size: 38;
-    color: aliceblue;
-    float: left;
-    padding-left: 650;
-    padding-top: 130;
-    position: relative;
-    padding-right: 25;
+ul {
+    font-size: 25;
 }
 
-.containerlvl2 {
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif, sans-serif;
-    font-size: 38;
-    color: aliceblue;
-    float: left;
-    padding-left: 592;
-    padding-top: 50;
-    position: relative;
-    padding-right: 25;
-}
-
-.containerlvl3 {
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif, sans-serif;
-    font-size: 38;
-    color: aliceblue;
-    float: left;
-    padding-left: 628;
-    padding-top: 50;
-    position: relative;
-    padding-right: 25;
-}
-
-.containerlvl4 {
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif, sans-serif;
-    font-size: 38;
-    color: aliceblue;
-    float: left;
-    padding-left: 697;
-    padding-top: 50;
-    position: relative;
-    padding-right: 25;
-}
-
-.containerlvl5 {
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif, sans-serif;
-    font-size: 38;
-    color: aliceblue;
-    float: left;
-    padding-left: 612;
-    padding-top: 50;
-    position: relative;
-    padding-right: 25;
-}
-
-.containerlvl6 {
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif, sans-serif;
-    font-size: 38;
-    color: aliceblue;
-    float: left;
-    padding-left: 702;
-    padding-top: 50;
-    position: relative;
-    padding-right: 25;
-}
-
-.allRectLvl {
-    float: right;
-    padding-left: 25;
-    
-}
-
-.rect1 {
-    opacity: 0.9;
-}
-.rect2 {
-    opacity: 0.8;
-}
-.rect3 {
-    opacity: 0.7;
-}
-.rect4 {
-    opacity: 0.6;
-}
-.rect5 {
-    opacity: 0.5;
-}
-.rectN {
-    opacity: 0;
-}
