--- a/portfolio.css
+++ b/portfolio.css
@@ -115,6 +115,7 @@ p {
     font-size: 32;
     padding-left: 310;
     padding-right: 310;
+    padding-top: 100px;
     font-family: 'Caviar';
 }
 
